--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-inverse">
           <ul class="nav navbar-nav">
             <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"> info@hellohelp.com</i></a></li>
-              <li><a href="#"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
+            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"> +440 8753692088</i></a></li>
             <li class="dropdown"><a href="#">Log In <span class="caret"></span></a></li>
             <li><a href="#">EN <span class="caret"></span></a></li>
             <li><a href="#" class="fa fa-facebook" alt="facebook logo"></a></li>
@@ -256,112 +256,103 @@
       <div class="col-md-1 padding"></div>
     </div>
     <!-- News, Announcements, and Products -->
-    <main class="row">
-      <div class="col-md-12">
-        <div class="col-md-offset-2 col-md-4 news">
-          <h4 class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right" alt="Responsive image"></img></h4>
-            <div class="row">
-              <div class="col-md-6">
-                <img class="img-responsive" src="assets/Jan-29.png" alt="Responsive image">
-              </div>
-            <div class="col-md-5">
-              <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-              <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
-              <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+    <main class="row nap">
+      <div class="col-md-4 col-md-offset-2 box">
+          <h4 class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
+          <div class="row">
+            <div class="col-md-6 col1">
+              <img class="img-responsive" src="assets/Jan-29.png">
+            </div>
+            <div class="col-md-5 col2">
+              <p class="headln">Lorem ipsum dolor sit amet</p>
+              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
             </div>
           </div>
           <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive" src="assets/Feb-15.png" alt="Responsive image">
+            <div class="col-md-6 col1">
+              <img class="img-responsive" src="assets/Feb-15.png">
             </div>
-            <div class="col-md-5">
-              <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-                <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
-                <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <img class="img-responsive" src="assets/Feb-15.png" alt="Responsive image">
-            </div>
-            <div class="col-md-5">
-              <h5><a href="#">Lorem ipsum dolor sit amet</a></h5>
-              <a class="news1" href="#">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</a>
-              <p><a class="news1" href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+            <div class="col-md-5 col2">
+              <p class="headln">Lorem ipsum dolor sit amet</p>
+              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
             </div>
           </div>
           <div class="row">
-            <a href="#" class="btn-view-all col-md-11" role="button">View All</a>
-          </div>
-          <div class="col-md-3">
-            <div class="row announcements">
-              <h4 class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right" alt="Responsive image"></img></h4>
-              <h5 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h5>
-              <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</a>
-              <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-              <div class="border-line"></div>
-              <h5 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</h5>
-              <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</a>
-              <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
+            <div class="col-md-6 col1">
+              <img class="img-responsive" src="assets/Mar-2.png">
             </div>
-            <div class="row products top-buffer">
-              <div class="products">
-                <h4 class="title">Products</h4>
-                <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</a>
-                <p><a href="#">Read More <i class="fa fa-caret-right"></i></a></p>
-              </div>
+            <div class="col-md-5 col2">
+              <p class="headln">Lorem ipsum dolor sit amet</p>
+              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
             </div>
           </div>
+          <button class="btn-view-all btn-default btn-block" role="button">View All</button>
+      </div>
+      <!-- do not know why box is around entire col-md-3 -->
+      <div class="col-md-3">
+        <div class="row box">
+          <div class="col-md-12">
+           <h4 class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
+           <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+           <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+           <div class="border-line"></div>
+           <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+           <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+         </div>
         </div>
-      </main>
+        <div class="row box top-buffer">
+          <div class="col-md-7">
+            <h4 class="title">Products</h4>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></a></p>
+          </div>
+       </div>
+     </div>
+  </main>
       <!-- Footer -->
       <footer>
-        <div class="navbar navbar-inverse" role="navigation">
           <div class="footer-container-fluid">
-            <div class="row footer">
-              <div class="col-md-3 col-md-offset-2">
-                <h1 class="title h4">NortSea About</h1>
-                <p><a href="#">Lorem ipsum dolor sit amet, con-<br>
-                      sectetur adipiscing elit, sed do<br>
-                      eiusmod tempor incididunt ut<br>
-                      labore et dolore magna aliqua. Ut<br>
-                      enim ad minim veniam,quis nos-<br>
-                      trud exercitation ullamco laboris<br>
-                      nisi ut aliquip ex ea commodo </a></p>
-                <a href="#">Read More  <i class="fa fa-caret-right"></i></a>
+            <div class="row footer-top">
+              <div class="col-md-2 col-md-offset-2 about">
+                  <h4 class="title">NortSea About</h4>
+                  <p><a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo </a></p>
+                  <a href="#">Read More  <i class="fa fa-caret-right"></i></a>
               </div>
-              <div class="col-md-2">
-                <h1 class="title h4">NortSea Hotel</h1>
+              <div class="col-md-2 hotel">
+                <h4 class="title">NortSea Hotel</h4>
                 <ul class="footer-col2-list">
                   <li><a href="#">About Us</a></li>
                   <li><a href="#">Services</a></li>
                   <li><a href="#">Contact</a></li>
                 </ul>
               </div>
-              <div class="col-md-2">
-                <h1 class="title h4">Contact Us</h1>
+              <div class="col-md-2 contact-us">
+                <h4 class="title">Contact Us</h4>
                 <ul class="footer-col3-list">
-                  <li><i class="fa fa-map-marker" aria-hidden="true"></i>Address: <a href="#">1100 Pico Blvd<br>
-                  Santa Monica, CA 90405<br>
-                  United States</a></li>
-                  <li><i class="fa fa-phone" aria-hidden="true"></i>Phone: <a href="#">+4401233123208"</a></li>
-                  <li><i class="fa fa-send" aria-hidden="true"></i>Email: <a href="#">support@nortsea.com</a></li>
-                  <li><i class="fa fa-compass" aria-hidden="true"></i>GPS: <a href="#">10.021211-118.469009</a></li>
-                </ul>
+                <li><i class="fa fa-map-marker" aria-hidden="true"></i>Address: <a href="#">1100 Pico Blvd<br>
+                Santa Monica, CA 90405<br>
+                United States</a></li>
+                <li><i class="fa fa-phone" aria-hidden="true"></i>Phone: <a href="#">+4401233123208"</a></li>
+                <li><i class="fa fa-send" aria-hidden="true"></i>Email: <a href="#">support@nortsea.com</a></li>
+                <li><i class="fa fa-compass" aria-hidden="true"></i>GPS: <a href="#">10.021211-118.469009</a></li>
               </div>
-              <div class="col-md-2 logo">
-                <img src="assets/logo_160.png"
-              </div>
-              </div>
-              <div class="row">
-                <div class="navbar-text pull-left">
-                  <p>Copyright @2015 NORTSEA | About NORTSEA | Contact Support</p>
-                </div>
-                <div class="navbar-text pull-right">
-                  <p>Designed by Faith34</p>
-                </div>
+              <div class="col-md-2">
+                <img src="assets/logo_160.png"></img>
               </div>
             </div>
+            <div class="row bar">
+                <div class="copyright">
+                  <p>Copyright @2015 NORTSEA | About NORTSEA | Contact Support</p>
+                </div>
+            <div class="copyright pull-right">
+                  <p>Designed by Faith34</p>
+               </div> -->
+             </div>
           </div>
       </footer>
   </div>
